syntax = "proto3";

package review;
option go_package = "2025_1_ChillGuys/internal/transport/generated/review";

message EmptyResponse {}

message AddReviewRequest {
  string product_id = 1;
  int32 rating = 2;
  string comment = 3;
}

message GetReviewsRequest {
  string product_id = 1;
  int32 offset = 2;
}

message Review {
  string id = 1;
  string name = 2;
  string surname = 3;
  string image_url = 4;
  int32 rating = 5;
  string comment = 6;
}

message GetReviewsResponse {
  repeated Review reviews = 1;
}

service ReviewService {
  rpc AddReview (AddReviewRequest) returns (EmptyResponse);
  rpc GetReviews (GetReviewsRequest) returns (GetReviewsResponse);
}